--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,3 @@
-@import "tailwindcss";
-
-@theme {
-  --font-outfit: "Outfit";
-  --color-primary: #4a86c5;
-  --color-secondary: #8ab8f3;
-}
-
-* {
-  font-family: var(--font-outfit);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
