new sidebar, main layout

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,8 @@
 
 @theme {
   --font-outfit: "Outfit";
-  --color-primary: #4a86c5;
-  --color-secondary: #8ab8f3;
+  --color-primary: #1976D2;
+  --color-secondary: #64B5F6;
 }
 
 * {
